<resources>
    <string name="app_name">spitifi</string>
    <string name="see_musicas">Ver Musicas</string>
    <string name="login">Login</string>
    <string name="register">Registar</string>
    <string name="registe_se_aqui">Registe-se aqui</string>
    <string name="artista">É artista?</string>
    <string name="tem_conta_registo">Já tem conta?</string>
    <string name="return_to_login">Voltar ao login</string>
    <string name="sideBar_name">Navigation Drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="imagem_ablum_guide">Imagem Album</string>
    <string name="notFound_artist">Artista não encontrado</string>
    <string name="bot_o_para_mostrar_c_digo_qr_da_m_sica">Botão para mostrar código QR da música</string>
    <string name="albuns">Albuns</string>
    <string name="frameworks"><![CDATA[• Retrofit & GSON (Square Inc.) - Comunicação API\n• Glide (BumpTech) - Gestão de Imagens\n• QRGenerator (AndroidMads) - Geração de QR Codes\n• ZXing Core (Google) - Processamento de QR/Barcodes\n• Material Components (Google) - UI/UX\n• AndroidX Jetpack - Estrutura e Retrocompatibilidade\n• ViewBinding & DataBinding - Vinculação de Dados]]></string>
    <string name="bibliotecas_e_frameworks_usadas">Bibliotecas e Frameworks Usadas:</string>
    <string name="n_25942_pedro_daniel_cairr_o_da_silva">Nº 25942 - Pedro Daniel Cairrão da Silva</string>
    <string name="in_cio">Início</string>
    <string name="a_minha_conta">A Minha Conta</string>
    <string name="artistas">Artistas</string>
    <string name="gerir_lbuns">Criar Álbum</string>
    <string name="sair">Sair</string>
    <string name="sobre">Sobre</string>
    <string name="atualizar_lbum">Atualizar Álbum</string>
    <string name="album">Album:</string>
    <string name="artista_nome">Artista: </string>
    <string name="criar_atualizar_lbum">Criar/ Atualizar Álbum</string>
    <string name="eliminar_lbum">Eliminar Álbum</string>
</resources>