<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/purple"
    tools:context=".ui.activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/register_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="420dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/username_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:hint="Nome de utilizador"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/register_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/username_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/email_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/confirm_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/password_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="17dp"
                    android:text="@string/artista"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/is_artista"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:chipBackgroundColor="@color/purple"
                    app:chipIconEnabled="true"
                    app:checkedIconVisible="true" />

            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/purple"
                android:onClick="enterRegister"
                android:padding="12dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/confirm_artist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/register_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tem_conta_registo"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:background="@android:color/transparent"
                    android:text="@string/return_to_login"
                    android:textColor="@android:color/holo_blue_dark"
                    android:onClick="renderLogin"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
